# cloudmask-aws-gui

./: .gitignore  ARCHITECTURE.md  DEPENDENCY_UPDATE.md  DEPLOYMENT.md  Dockerfile  PROJECT.MD  README.md  RELEASE.md  docker-compose.amd.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  start-backend.sh  test-build.sh
backend/: Dockerfile  api.py  pyproject.toml
docs/: ENGLISH-TO-REGEX.md  SPEC.md  STEERING.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ConfigurationTab.jsx  DiffViewer.jsx  MaskingForm.jsx  OllamaToolsTab.jsx  RegexBuilderTab.jsx  UnmaskingForm.jsx
