[project]
name = "cloudmask-gui"
version = "0.4.1"
description = "Web frontend for CloudMask AWS anonymization tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.12.2",
    "python-multipart>=0.0.20",
    "cloudmask-aws>=0.4.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "python-semantic-release>=10.4.1",
]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "echo 'No build needed'"

[tool.ruff]
line-length = 100
target-version = "py313"
