[project]
name = "cloudmask-gui"
version = "0.4.1"
description = "Web frontend for CloudMask AWS anonymization tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.12.2",
    "python-multipart>=0.0.20",
    "cloudmask-aws>=0.4.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "python-semantic-release>=8.0.0",
]
